--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -100,4 +100,11 @@
         android:hint="ex) 2018"
         android:paddingHorizontal="10dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id = "@+id/complete"
+        android:text ="회원가입 완료"
+        android:layout_gravity="right" />
+
 </LinearLayout>
