--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,9 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
 
-
+    </style>
+    <style name="page_title">
+        <item name="android:textSize">80dp</item>
+        <item name="android:textColor">#000000</item>
     </style>
 </resources>
