--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -4,7 +4,7 @@
     android:id="@+id/map_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity_main_screen" >
+    tools:context=".MapFragment" >
 
     <fragment
         android:id="@+id/map"
