FireBase 연결완료, 회원가입 화면에서 뒤로가기 버튼 생성

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,6 +35,7 @@
         android:layout_marginBottom="20dp"
         android:background="@drawable/login_box"
         android:hint="Password"
+        android:inputType="textPassword"
         android:minHeight="48dp"
         android:paddingHorizontal="10dp" />
 
