--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,8 @@
         <item name="android:textSize">80dp</item>
         <item name="android:textColor">#000000</item>
     </style>
+    <style name="page_main">
+        <item name="android:textSize">40dp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
 </resources>
