--- a/app/src/main/res/layout/fragment_mylevel.xml
+++ b/app/src/main/res/layout/fragment_mylevel.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingTop="20dp">
     <!-- 업적 -->
@@ -16,38 +17,75 @@
         android:textAppearance="@style/page_title"
         tools:ignore="MissingConstraints" />
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/levelWrapper"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
+        android:layout_height="288dp"
+
+        android:layout_below="@id/my_level"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="-18dp"
+        android:layout_marginEnd="0dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/levelAvatar"
             android:layout_width="200dp"
-            android:layout_height="240dp"
+            android:layout_height="200dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="30dp"
             android:src="@drawable/level22" />
 
+        <ProgressBar
+            android:id="@+id/expBar"
+            android:layout_width="250dp"
+            android:layout_height="300dp"
+            android:background="@drawable/progressbar_circularbg"
+            android:indeterminateOnly="false"
+            android:max="120"
+            android:progress="20"
+            android:progressDrawable="@drawable/progressbar_circular" />
+        <!--        https://show-me-the-money.tistory.com/entry/Circular-Progress-bar-%EB%A7%8C%EB%93%A4%EA%B8%B0-->
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:id="@+id/myLevel_text"
+            android:layout_width="155dp"
+            android:layout_height="232dp"
             android:layout_gravity="right"
+            android:layout_marginLeft="6dp"
+            android:layout_toRightOf="@+id/levelAvatar"
             android:gravity="center"
             android:text="당신은\n22학번\n입니다!"
             android:textColor="@color/black"
             android:textSize="30dp" />
-    </LinearLayout>
+        <Button
+            android:id="@+id/lowerExp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/myLevel_text"
+            android:layout_toLeftOf="@id/addExp"
+            android:text="경험치 뺴기" />
+        <Button
+            android:id="@+id/addExp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/myLevel_text"
+            android:layout_alignParentRight="true"
+            android:text="경험치 더하기" />
+    </RelativeLayout>
 
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/levelWrapper"
+        android:layout_alignParentLeft="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <TextView
                 android:layout_width="match_parent"
@@ -92,4 +130,4 @@
         </LinearLayout>
     </ScrollView>
 
-</LinearLayout>
+</RelativeLayout>
