--- a/app/src/main/res/drawable/progressbar_circularbg.xml
+++ b/app/src/main/res/drawable/progressbar_circularbg.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="ring"
     android:innerRadiusRatio="2.5"
-    android:thickness="5dp"
+    android:thickness="12dp"
     android:useLevel="false">
-    <solid android:color="@color/menu_off"/>
+    <solid android:color="@color/progressbar_off"/>
 
 </shape>
