--- a/app/src/main/res/layout/fragment_mylevel.xml
+++ b/app/src/main/res/layout/fragment_mylevel.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:paddingTop="20dp">
+    android:paddingTop="20dp"
+    android:background="@color/white">
     <!-- 업적 -->
     <TextView
-        android:id="@+id/my_level"
+        android:id="@+id/myLevel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="-12dp"
@@ -22,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="288dp"
 
-        android:layout_below="@id/my_level"
+        android:layout_below="@id/myLevel"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="-18dp"
@@ -48,7 +49,7 @@
             android:progressDrawable="@drawable/progressbar_circular" />
         <!--        https://show-me-the-money.tistory.com/entry/Circular-Progress-bar-%EB%A7%8C%EB%93%A4%EA%B8%B0-->
         <TextView
-            android:id="@+id/myLevel_text"
+            android:id="@+id/myLevel_description"
             android:layout_width="155dp"
             android:layout_height="232dp"
             android:layout_gravity="right"
@@ -62,14 +63,14 @@
             android:id="@+id/lowerExp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/myLevel_text"
+            android:layout_below="@id/myLevel_description"
             android:layout_toLeftOf="@id/addExp"
             android:text="경험치 뺴기" />
         <Button
             android:id="@+id/addExp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/myLevel_text"
+            android:layout_below="@id/myLevel_description"
             android:layout_alignParentRight="true"
             android:text="경험치 더하기" />
     </RelativeLayout>
@@ -88,44 +89,58 @@
             >
 
             <TextView
+                android:id="@+id/level1TV"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:background="@drawable/login_box"
-                android:gravity="center"
-                android:text="Lv1. 파릇 파릇 새내기\n0=&lt;Exp&lt;250"
+                android:paddingLeft="80dp"
+                android:gravity="center_vertical"
+                android:text="@string/level1Name"
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/level2TV"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:background="@drawable/login_box"
-                android:gravity="center"
-                android:text="Lv2. 나도 이제 헌내기?\n250&lt;=Exp&lt;750"
-                android:textSize="20sp" />
+                android:paddingLeft="80dp"
+                android:gravity="center_vertical"
+                android:text="@string/level2Name"
+                android:textSize="20sp"
+                android:visibility="invisible"/>
 
             <TextView
+                android:id="@+id/level3TV"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:background="@drawable/login_box"
-                android:gravity="center"
-                android:text="Lv3. ㅡ꼰ㅡ\n750&lt;=Exp&lt;1500"
-                android:textSize="20sp" />
+                android:paddingLeft="80dp"
+                android:gravity="center_vertical"
+                android:text="@string/level3Name"
+                android:textSize="20sp"
+                android:visibility="invisible"/>
 
             <TextView
+                android:id="@+id/level4TV"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:background="@drawable/login_box"
-                android:gravity="center"
-                android:text="Lv4. 졸작취준토익토플\n1500&lt;=Exp&lt;2500"
-                android:textSize="20sp" />
+                android:paddingLeft="80dp"
+                android:gravity="center_vertical"
+                android:text="@string/level4Name"
+                android:textSize="20sp"
+                android:visibility="invisible"/>
 
             <TextView
+                android:id="@+id/level5TV"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:background="@drawable/login_box"
-                android:gravity="center"
-                android:text="Lv5. --.. -.. ...- -... -... . .-..\n2500&lt;=Exp"
-                android:textSize="20sp" />
+                android:paddingLeft="80dp"
+                android:gravity="center_vertical"
+                android:text="@string/level5Name"
+                android:textSize="20sp"
+                android:visibility="invisible"/>
 
         </LinearLayout>
     </ScrollView>
