--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,20 +14,13 @@
         android:layout_marginTop="100dp"
         android:src="@drawable/campus_book_240" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginVertical="60dp"
-        android:gravity="center"
-        android:text="아직도 졸업을 안해..?" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/lvButton"
+            android:id="@+id/mapButton"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="bottom"
@@ -40,15 +33,23 @@
             android:layout_height="60dp"
             android:layout_gravity="bottom"
             android:layout_weight="1"
-            android:text="업적" />
+            android:text="QR" />
 
         <Button
-            android:id="@+id/mapButton"
+            android:id="@+id/achivButton"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="bottom"
             android:layout_weight="1"
-            android:text="QR 찍기" />
+            android:text="업적" />
+
+        <Button
+            android:id="@+id/levelButton"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:text="레벨" />
     </LinearLayout>
 
 
