--- a/app/src/main/res/layout/activity_my_level.xml
+++ b/app/src/main/res/layout/activity_my_level.xml
@@ -21,7 +21,7 @@
     <RelativeLayout
         android:id="@+id/levelWrapper"
         android:layout_width="match_parent"
-        android:layout_height="288dp"
+        android:layout_height="318dp"
 
         android:layout_below="@id/myLevel"
         android:layout_alignParentLeft="true"
@@ -51,10 +51,11 @@
 
         <TextView
             android:id="@+id/myLevel_description"
-            android:layout_width="164dp"
+            android:layout_width="166dp"
             android:layout_height="197dp"
             android:layout_gravity="right"
             android:layout_marginLeft="6dp"
+            android:layout_marginTop="25dp"
             android:layout_toRightOf="@+id/levelAvatar"
             android:gravity="center"
             android:text="당신은\n22학번\n입니다!"
