--- a/app/src/main/res/drawable/button_border.xml
+++ b/app/src/main/res/drawable/button_border.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle">
 
     <stroke android:width="4dp" android:color="#000000"/>
-    <solid android:color="#3F51B5"/>
+    <solid android:color="#cc211d"/>
     <corners
         android:radius="10dp"/>
 </shape>
