--- a/app/src/main/res/layout/listview_achiev.xml
+++ b/app/src/main/res/layout/listview_achiev.xml
@@ -8,7 +8,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/achivBox"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="#FAF0D7"
+        >
 
         <TextView
                 android:layout_width="match_parent"
@@ -19,6 +21,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/achivDate"
+                android:layout_gravity="right" />
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/achivExp"
                 android:layout_gravity="right" />
     </LinearLayout>
 
