--- a/app/src/main/res/layout/listview_achiev.xml
+++ b/app/src/main/res/layout/listview_achiev.xml
@@ -1,25 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <LinearLayout
-        android:id="@+id/achivBox"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="5dp"
-        android:background="@drawable/login_box"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/achivTitle"
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:gravity="center_vertical"
-            android:paddingHorizontal="15dp"
-            android:textSize="20dp" />
+            android:layout_height="wrap_content"
+            android:id="@+id/achivBox"
+            android:orientation="vertical"
+            android:background="#FAF0D7"
+        >
 
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/achivTitle" />
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/achivDate"
+                android:layout_gravity="right" />
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/achivExp"
+                android:layout_gravity="right" />
     </LinearLayout>
 
 </LinearLayout>
