--- a/app/src/main/res/drawable/button_border.xml
+++ b/app/src/main/res/drawable/button_border.xml
@@ -3,8 +3,10 @@
     android:padding="10dp"
     android:shape="rectangle">
 
-    <stroke android:width="4dp" android:color="#000000"/>
-    <solid android:color="#cc211d"/>
+    <stroke android:width="3dp" android:color="#000000"/>
+
+    <solid android:color="#661A589B"/>
+
     <corners
         android:radius="10dp"/>
 </shape>
