--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -10,7 +10,7 @@
     <fragment
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="10"
+        android:layout_weight="12"
         android:id="@+id/map"
         tools:context=".MapsActivity"
         android:name="com.google.android.gms.maps.SupportMapFragment" />
@@ -24,19 +24,21 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/button"
+            android:background="@drawable/button_border"
             android:layout_weight="1"/>
         <Button
             android:text="카페"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/button2"
+            android:background="@drawable/button_border"
             android:layout_weight="1"/>
-
         <Button
             android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="학교"
+            android:background="@drawable/button_border"
             android:layout_weight="1"/>
     </LinearLayout>
 </LinearLayout>
